# Bug_tracker_dashboard

./: .gitignore  README.md  batch_scraper.py  requirements.txt  scraped_google_issues_aggregated.csv  updated_scraper.py
bugtracker/: .env  db.sqlite3  manage.py  requirements.txt
bugtracker/api/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
bugtracker/bugtracker/: asgi.py  celery.py  urls.py  (+2 more)
frontend/: package-lock.json
reporter/: README.md  app.py  chart_generator.py  chat_handler.py  file_processor.py  models.py  ollama_service.py  pyproject.toml  template_engine.py
reporter/flask_report_maker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reporter/instance/: reporter.db
reporter/templates/: index.html
reporter_3/: db.sqlite3  main.py  manage.py  pyproject.toml
reporter_3/chat/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
reporter_3/chat/migrations/: 0001_initial.py
reporter_3/chat/services/: chat_handler.py  file_processor.py  ollama_service.py
reporter_3/reportmaker/: asgi.py  settings.py  urls.py  wsgi.py
reporter_3/reports/: admin.py  models.py  tests.py  urls.py
reporter_3/reports/migrations/: 0001_initial.py
reporter_3/reports/services/: chart_generator.py  report_generator.py  version_control.py
reporter_3/static/css/: main.css
reporter_3/static/js/: chat.js
reporter_3/templates/: base.html
reporter_3/templates/chat/: chat_page.html
reporter_3/templates_manager/: admin.py  models.py  template_engine.py  urls.py  views.py
reporter_3/templates_manager/migrations/: 0001_initial.py
(+25 files in other folders)
